[package]
name = 'twitch-archiver'
version = '0.1.1'
authors = ['Anton Bulakh <him@necauq.ua>']
edition = '2021'

[dependencies]
anyhow = { version = '1', features = ['backtrace'] }
base64 = '0.22'
clap = { version = '4', features = ['derive'] }
file-rotate = '0.7'
smallvec = '1'
tcp-stream = '0.29'
uuid = '1'
